--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,21 +1,5 @@
 @import '../../scss/shared.scss';
 
-.homeFlexbox {
-    @include flexbox(row);
-  
-    &-left {
-        padding-right: 1rem;
-
-        &-div {
-            margin-bottom: 1rem;
-        }
-
-        &-link {
-            text-align: center;
-        }
-    }
-}
-
 .homeSection {
     display: inline;
     color: map-get($colors, secondary);
